--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -1,28 +1,61 @@
 {% extends "base.html"  %}
 {% block content %}
 
-  <!-- Begin page content -->
-  <div class="container">
-    <div class="page-header">
-      <h1>Todo App</h1>
-    </div>
-    
-    <p class="lead">These are your todo's</p>
-    
-    {% for todo in todos %}
-      <li>{{ todo.todo_text }}</li>
-    {% endfor %}
-    
-    <hr />
-    <p>Add a new todo here</p>
-    <form method="POST">
-      {{ template_form.hidden_tag() }}
-      <p>
-        {{ template_form.todo.label }}
-        {{ template_form.todo() }}
-        {{ template_form.submit() }}
-      </p>
-    </form>
-  </div>
+<!-- Begin page content -->
+<section class="vh-100 gradient-custom">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-xl-10">
 
-  {% endblock %}
+        <div class="card">
+          <div class="card-body p-5">
+
+            <form class="d-flex justify-content-center align-items-center mb-4">
+              <div class="form-outline flex-fill">
+                <input type="text" id="form2" class="form-control" />
+                <label class="form-label" for="form2">New task...</label>
+              </div>
+              <button type="submit" class="btn btn-info ms-2">Add</button>
+            </form>
+
+            <form method="POST" class="d-flex justify-content-center align-items-center mb-4">
+              <div class="form-outline flex-fill">
+              {{ template_form.hidden_tag() }}
+              <p>
+                {{ template_form.todo() }}
+                {{ template_form.submit() }}
+              </p>
+              </div>
+            </form>
+
+            <!-- ToDo list content -->
+            <div class="tab-content" id="ex1-content">
+              <div class="tab-pane fade show active" id="ex1-tabs-1" role="tabpanel"
+                aria-labelledby="ex1-tab-1">
+                <ul class="list-group mb-0">
+
+                  {% for todo in todos %}
+                  <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
+                    style="background-color: #f4f6f7;">
+                    <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." {% if todo.completed %} checked {% endif %} />
+                    {% if todo.completed %}
+                      <s>{{ todo.todo_text }}</s>
+                    {% else %}
+                    {{ todo.todo_text }}
+                    {% endif %}
+                  </li>
+                  {% endfor %}
+
+                </ul>
+              </div>
+            <!-- Todo list content -->
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+{% endblock %}
