--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -21,10 +21,8 @@
             <form method="POST" class="d-flex justify-content-center align-items-center mb-4">
               <div class="form-outline flex-fill">
               {{ template_form.hidden_tag() }}
-              <p>
                 {{ template_form.todo() }}
                 {{ template_form.submit() }}
-              </p>
               </div>
             </form>
 
@@ -43,6 +41,11 @@
                     {% else %}
                     {{ todo.todo_text }}
                     {% endif %}
+                    <form method="POST">
+                      {{ template_form.hidden_tag() }}
+                        {{ template_form.id() }}
+                        {{ template_form.submit() }}
+                    </form>
                   </li>
                   {% endfor %}
 
