--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -18,7 +18,8 @@
               <button type="submit" class="btn btn-info ms-2">Add</button>
             </form>
 
-            <form method="POST" class="d-flex justify-content-center align-items-center mb-4">
+            <!-- We will create the add form here and re-direct it to /add -->
+            <form method="POST" action="/add" class="d-flex justify-content-center align-items-center mb-4">
               <div class="form-outline flex-fill">
               {{ template_form.hidden_tag() }}
                 {{ template_form.todo() }}
@@ -41,11 +42,8 @@
                     {% else %}
                     {{ todo.todo_text }}
                     {% endif %}
-                    <form method="POST">
-                      {{ template_form.hidden_tag() }}
-                        {{ template_form.id() }}
-                        {{ template_form.submit() }}
-                    </form>
+                    <a href="/update/{{ todo.id }}">Done</a>
+                    <a href="/delete/{{ todo.id }}">Delete</a>
                   </li>
                   {% endfor %}
 
